// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput renders decimal field with value, unit and error 1`] = `
<View
  style={
    {
      "gap": 4,
    }
  }
  testID="cg"
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#8B949E",
          "fontFamily": "System",
          "fontSize": 9,
          "fontWeight": "600",
          "letterSpacing": 0.54,
          "lineHeight": 12,
          "textAlign": "auto",
        },
        {
          "textTransform": "uppercase",
        },
      ]
    }
  >
    CG
  </Text>
  <View
    style={
      {
        "backgroundColor": "rgba(0, 194, 168, 0.2)",
        "borderRadius": 10,
        "padding": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#11161F",
          "borderColor": "#E5484D",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 44,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <TextInput
        accessibilityLabel="CG"
        editable={true}
        keyboardType="decimal-pad"
        onBlur={[Function]}
        onChangeText={[MockFunction]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="#6E7681"
        returnKeyType="done"
        style={
          {
            "color": "#E6EDF3",
            "flex": 1,
            "fontFamily": "Menlo",
            "fontSize": 16,
          }
        }
        testID="cg-input"
        value="25.5"
      />
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#6E7681",
              "fontFamily": "Menlo",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        %MAC
      </Text>
    </View>
  </View>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#E5484D",
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 16,
          "textAlign": "auto",
        },
        undefined,
      ]
    }
    testID="cg-error"
  >
    Above maximum 35 %MAC
  </Text>
</View>
`;

exports[`NumericInput renders empty integer field with placeholder in dark theme 1`] = `
<View
  style={
    {
      "gap": 4,
    }
  }
  testID="weight"
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#8B949E",
          "fontFamily": "System",
          "fontSize": 9,
          "fontWeight": "600",
          "letterSpacing": 0.54,
          "lineHeight": 12,
          "textAlign": "auto",
        },
        {
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Landing weight
  </Text>
  <View
    style={
      {
        "backgroundColor": "rgba(0, 194, 168, 0.2)",
        "borderRadius": 10,
        "padding": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#11161F",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 44,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <TextInput
        accessibilityLabel="Landing weight"
        editable={true}
        keyboardType="numeric"
        onBlur={[Function]}
        onChangeText={[MockFunction]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="e.g. 170"
        placeholderTextColor="#6E7681"
        returnKeyType="done"
        style={
          {
            "color": "#E6EDF3",
            "flex": 1,
            "fontFamily": "Menlo",
            "fontSize": 16,
          }
        }
        testID="weight-input"
        value=""
      />
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#6E7681",
              "fontFamily": "Menlo",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        t
      </Text>
    </View>
  </View>
</View>
`;

exports[`NumericInput renders empty integer field with placeholder in light theme 1`] = `
<View
  style={
    {
      "gap": 4,
    }
  }
  testID="weight"
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#4B5563",
          "fontFamily": "System",
          "fontSize": 9,
          "fontWeight": "600",
          "letterSpacing": 0.54,
          "lineHeight": 12,
          "textAlign": "auto",
        },
        {
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Landing weight
  </Text>
  <View
    style={
      {
        "backgroundColor": "rgba(0, 194, 168, 0.2)",
        "borderRadius": 10,
        "padding": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 44,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <TextInput
        accessibilityLabel="Landing weight"
        editable={true}
        keyboardType="numeric"
        onBlur={[Function]}
        onChangeText={[MockFunction]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="e.g. 170"
        placeholderTextColor="#6B7280"
        returnKeyType="done"
        style={
          {
            "color": "#1F2937",
            "flex": 1,
            "fontFamily": "Menlo",
            "fontSize": 16,
          }
        }
        testID="weight-input"
        value=""
      />
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#6B7280",
              "fontFamily": "Menlo",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        t
      </Text>
    </View>
  </View>
</View>
`;
